--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "fideloper/proxy": "^4.0",
         "kepex/laravel-crud-generator": "^0.1.8",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "vsmoraes/laravel-pdf": "^2.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
