--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-dompdf": "^0.8.4",
         "doctrine/dbal": "^2.9",
+        "fedeisas/laravel-mail-css-inliner": "^2.2",
         "fideloper/proxy": "^4.0",
         "kepex/laravel-crud-generator": "^0.1.8",
         "laravel/framework": "5.8.*",
